# frenet

./: .gitignore  CalcSplineCourse.m  LICENSE  README.md  cFrenetTrajectory.m  cOptimalFrenetPlanner.m  cQuinticPoly.m  cSpline.m  cSpline2D.m  environment.yml  frenet.m  intersect.m  optimalFrenet.m  spline.m
example/: frenet_main_window.py  main.py  mainwindow.py  mainwindow.ui  mainwindow_ui.py  mpldynamicswidget.py
example/ui/: frenet_main_window.ui  frenet_main_window_ui.py
example/widgets/: dynamics_widget.py  mplwidget.py
ipython/: python.ipynb
matlab/: Cart2FRT.m  ClosestRefPoint.m  Distance.m  FRT2Cart.m  NextRefPoint.m  cOptimalFrenetPlanner.m  cQuarticPoly.m  cQuinticPoly.m  cSpline.m  frenet.m  optimalFrenet.m  spline.m  transformation.m
python/: controller.py  frenet.sh  main.py  pyproject.toml
python/gui/: frenet_main_window.py  guiFrenet.sh  mainwindow_ui.py
python/gui/ui/: frenet_main_window.ui  frenet_main_window_ui.py
python/gui/widgets/: dynamics_widget.py  path_widget.py
python/src/: cubic_spline_planner.py  frenet.html  frenet.ipynb  transformation.ipynb
python/src/frenet/: __init__.py  frenet_optimal_trajectory.py  frenet_transform.py
python/tests/: test_frenet_transform.py
