[project]
name = "frenet"
version = "0.1.0"
description = "Frenet optimal trajectory planner with Frenet-Cartesian coordinate transforms"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
gui = [
    "PySide2",
]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/frenet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
